# meta-game-bargaining-agent-purple

./: .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml  sample.env
memory/opponents/: purple_vs_aspiration.md  purple_vs_soft.md  purple_vs_tough.md  purple_vs_walk.md
src/: agent.py  executor.py  memory.py  messenger.py  server.py
tests/: conftest.py  test_agent.py  test_memory.py  test_validate.py
